--- a/Backend/src/ProjectManagement.API/appsettings.json
+++ b/Backend/src/ProjectManagement.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ProjectManagementDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=ProjectManagementDb.db"
   },
   "Jwt": {
     "Key": "YourSuperSecretKeyThatShouldBeAtLeast32CharactersLong!",
